gnome-shell (3.25.91-4) UNRELEASED; urgency=medium

  * debian/rules:
    - Don't use variable when passing libexecdir for meson build
    - Change --list-missing to --fail-missing to catch this kind of problem
    - Switch to dh_missing

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 01 Sep 2017 10:57:42 -0400

gnome-shell (3.25.91-3) experimental; urgency=medium

  * Don't fail the build for test failures

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 31 Aug 2017 18:51:45 -0400

gnome-shell (3.25.91-2) experimental; urgency=medium

  * Build-Depend on libgl1-mesa-dri for build tests since
    Debian's mesa packages currently only recommends it

 -- Jeremy Bicha <jbicha@debian.org>  Thu, 31 Aug 2017 12:43:54 -0400

gnome-shell (3.25.91-1) experimental; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release
  * Build with meson
  * debian/control.in:
    - Drop obsolete Build-Depends against telepathy-glib
    - Build-Depend on libasound2-dev
    - Bump minimum mutter to 3.25.91, gjs to 1.47.90,
      glib to 2.53.0
    - Depend on gir1.2-geoclue-2.0 and gir1.2-rsvg-2.0
    - Depend on caribou (LP: #1589240)
    - Recommend chrome-gnome-shell
    - Recommend switcheroo-control for dual GPU support
  * debian/rules:
    - Drop disable-new-dtags flag, no longer needed
    - Drop dh_girepository override, doesn't work with meson
      and apparently not needed
  * debian/gnome-shell-common.install:
    - Don't try to install gtk-doc documentation
  * Drop icon theme dependency hack no longer used by Ubuntu 
  * Add run-unit-tests.patch: Run unit tests with meson
  * Drop 3.14 upgrade hack, not needed after stretch
  * Drop 50-extension-reload-fail.patch: applied in new release
  * Bump Standards-Version to 4.1.0

  [ Simon McVittie]
  * Drop Telepathy g-i bindings from Depends to Suggests now that they
    are runtime-optional upstream

 -- Simon McVittie <smcv@debian.org>  Thu, 31 Aug 2017 12:24:23 +0100

gnome-shell (3.22.3-3) unstable; urgency=medium
