@@ -37,5 +37,13 @@ override_dh_shlibdeps:
 override_dh_strip:
 	dh_strip --dbgsym-migration='gnome-shell-dbg (<< 3.20.2-2~)'
 
+override_dh_translations:
+	ninja -C obj-$(DEB_HOST_GNU_TYPE) gnome-shell-pot
+	dh_translations
+
 override_dh_auto_test:
+ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
+	xvfb-run dh_auto_test
+else	
 	-xvfb-run dh_auto_test
+endif
